k8s/homelab/glance/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
