k8s/homelab/glance/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
spec:
  parentRefs:
    - namespace: envoy-gateway-system
      name: gateway-local
    - namespace: envoy-gateway-system
      name: gateway-tailscale
  hostnames:
    - glance.hs.liquid.sh
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: glance
          port: 8080
